@@ -517,13 +517,13 @@ name|dbEntityName
 operator|=
 name|dbEntityName
 expr_stmt|;
+name|this
+operator|.
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
-operator|(
-name|ColumnSelect
-argument_list|<
-name|T
-argument_list|>
-operator|)
 name|this
 return|;
 block|}
@@ -774,6 +774,10 @@ argument_list|,
 name|orderings
 argument_list|)
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -837,6 +841,10 @@ argument_list|(
 name|orderings
 argument_list|)
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -884,6 +892,10 @@ name|merge
 argument_list|(
 name|prefetch
 argument_list|)
+expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
 expr_stmt|;
 return|return
 name|this
@@ -940,6 +952,10 @@ name|setSemantics
 argument_list|(
 name|semantics
 argument_list|)
+expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
 expr_stmt|;
 return|return
 name|this
@@ -1360,6 +1376,10 @@ name|singleColumn
 operator|=
 literal|false
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 operator|(
 name|ColumnSelect
@@ -1461,6 +1481,10 @@ name|singleColumn
 operator|=
 literal|false
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 operator|(
 name|ColumnSelect
@@ -1534,6 +1558,12 @@ name|add
 argument_list|(
 name|property
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|replacementQuery
+operator|=
+literal|null
 expr_stmt|;
 return|return
 operator|(
@@ -1977,6 +2007,12 @@ name|distinct
 operator|=
 literal|true
 expr_stmt|;
+name|this
+operator|.
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -2001,6 +2037,12 @@ operator|.
 name|distinct
 operator|=
 literal|false
+expr_stmt|;
+name|this
+operator|.
+name|replacementQuery
+operator|=
+literal|null
 expr_stmt|;
 return|return
 name|this
@@ -2031,6 +2073,10 @@ operator|=
 name|exp
 expr_stmt|;
 block|}
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 block|}
 specifier|private
 name|Expression
