@@ -946,6 +946,10 @@ argument_list|(
 name|all
 argument_list|)
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -1081,6 +1085,10 @@ argument_list|(
 name|all
 argument_list|)
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -1194,6 +1202,10 @@ argument_list|,
 name|orderings
 argument_list|)
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -1257,6 +1269,10 @@ argument_list|(
 name|orderings
 argument_list|)
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
 return|return
 name|this
 return|;
@@ -1304,6 +1320,10 @@ name|merge
 argument_list|(
 name|prefetch
 argument_list|)
+expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
 expr_stmt|;
 return|return
 name|this
@@ -1360,6 +1380,10 @@ name|setSemantics
 argument_list|(
 name|semantics
 argument_list|)
+expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
 expr_stmt|;
 return|return
 name|this
@@ -1730,12 +1754,21 @@ argument_list|>
 name|fetchDataRows
 parameter_list|()
 block|{
-name|this
-operator|.
+if|if
+condition|(
+operator|!
+name|fetchingDataRows
+condition|)
+block|{
 name|fetchingDataRows
 operator|=
 literal|true
 expr_stmt|;
+name|replacementQuery
+operator|=
+literal|null
+expr_stmt|;
+block|}
 return|return
 operator|(
 name|ObjectSelect
